[workspace]
members = [
    "crates/stage1",
    "crates/stage10",
    "crates/stage2",
    "crates/stage3",
    "crates/stage4",
    "crates/stage5",
    "crates/stage6",
    "crates/stage7",
    "crates/stage8",
    "crates/stage9",
    "crates/stage11",
    "crates/stage12",
    "crates/stage13",
    "crates/stage14",
]
